src/objects/OM_Sales_Rep__c.object
<CustomObject>
    <fields>
        <fullName>OM_Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_MDM_Name__c</fullName>
        <label>MDM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Sales_Rep_Status__c</fullName>
        <label>Sales Rep Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Rep ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>